# music_decomp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: INDEX.md
docs/by-date/: 2026-06-13-agent-coordination-workflow.md  2026-06-13-detailed-execution-plan.md  2026-06-13-initial-project-plan.md  2026-06-13-repository-hygiene.md  2026-06-13-step-1-python-scaffold.md  2026-06-13-step-2-core-domain-types.md  2026-06-13-step-3-media-service.md  2026-06-13-step-4-export-service.md  2026-06-13-step-5-separation-service.md  2026-06-13-step-6-recorder-service.md  2026-06-13-step-7-gui-shell.md  2026-06-13-user-requirements.md  2026-06-14-step-8-file-separation.md  2026-06-14-user-requirements.md  2026-06-24-documentation-refresh.md  2026-06-24-step-10-cli-workflows.md  2026-06-24-step-11-dependency-and-asset-manifest.md  2026-06-24-step-12-windows-packaging.md  2026-06-24-step-13-offline-acceptance.md  2026-06-24-step-9-recording-separation.md  2026-06-24-user-requirements.md
docs/by-feature/: agent-coordination-workflow.md  cli-workflows.md  core-domain-types.md  current-project-status.md  dependency-and-asset-manifest.md  export-service-output-metadata.md  file-separation-pipeline.md  gui-shell.md  media-service-ffmpeg.md  offline-acceptance-test.md  (+8 more)
logs/: INDEX.md
requirements/: base.in  win-cpu.txt  win-cuda.txt
scripts/: verify_portable_package.py
tests/: test_cli.py  test_domain_models.py  test_export_service.py  test_file_pipeline.py  test_gui_shell.py  test_media_service.py  test_paths.py  test_recorder_service.py  test_synthetic_audio.py
(+63 files in other folders)
